# tima-ipc

./: .gitignore  Makefile.am  configure.ac  execute.sh
sample/: Makefile.am  mqueue  rpc  sample_cmd.c  sample_mq.c  sample_mqsend.c  sample_pubsub.c  sample_reply.c  sample_rpc  sample_rpc.c  test
ti/: Makefile.am  tima_command.c  tima_eventq.c  tima_eventq.h  tima_proc_rpc.c  tima_proc_rpc.h  tima_proc_rpcd.c  tima_proc_rpcd.h  tima_rpc.c  tima_rpc.h  tima_rpcd.c
tima-api/: Makefile.am  tima_eventq.c  tima_pub.c  tima_sub.c
