AUTOMAKE_OPTIONS=foreign
#noinst_LIBRARIES = librpc.a
#librpc_a_LIBADD =\
#$(STATIC_LIBS)
#librpc_a_SOURCES=\
#tima_proc_rpc.c \
#tima_proc_rpcd.h \
#tima_typedef.h \
#tima_proc_rpcd.c \
#tima_proc_rpc.h
#lib_LTLIBRARIES = librpc.la
#librpc_la_LIBADD =\
#$(project_dir)/premake/x86/install/lib/libnanomsg.so
##$(STATIC_LIBS)
#librpc_la_SOURCES=\
#tima_proc_rpc.c \
#tima_proc_rpcd.h \
#tima_typedef.h \
#tima_proc_rpcd.c \
#tima_proc_rpc.h
#noinst_PROGRAMS = librpc.so
lib_LTLIBRARIES = librpc.la
LIBS=$(DYNAMIC_LIBS)
librpc_la_LDFLAGS = -fPIC $(EXTRA_LDFLAGS)
#librpc_la_LDFLAGS = $(EXTRA_LDFLAGS)
librpc_la_LIBADD =\
$(STATIC_LIBS)
#$(project_dir)/premake/x86/install/lib/libnanomsg.so
#$(project_dir)/premake/x86/install/lib/libnanomsg.a
#$(project_dir)/premake/x86/install/lib/libnanomsg.so
#$(STATIC_LIBS)
librpc_la_SOURCES=\
tima_rpc.c \
tima_rpcd.h \
tima_typedef.h \
tima_rpcd.c \
tima_rpc.h
